add transaction signature logic

--- a/src/ui/styles/common.less
+++ b/src/ui/styles/common.less
@@ -258,6 +258,9 @@
   .border-bottom-common {
     border-bottom: 1px solid @common-color;
   }
+  .border-link {
+    border: 1px solid @iblue-color;
+  }
   .border-green {
     border-bottom: 1px solid @green;
   }
@@ -303,6 +306,10 @@
   }
   .font-xxxl {
     .font('xxxl');
+    line-height: normal;
+  }
+  .font-xxsl {
+    .font('xxsl');
     line-height: normal;
   }
   .font-xxl {
@@ -446,6 +453,10 @@
   .px-sm {
     padding-left: @space-sm;
     padding-right: @space-sm;
+  }
+  .px-xxs {
+    padding-left: @space-xxs;
+    padding-right: @space-xxs;
   }
   .px-xs {
     padding-left: @space-xs;
